--- a/01-intro/.gitignore
+++ b/01-intro/.gitignore
@@ -10,3 +10,15 @@
 /*.upa
 /cpu-vonNeumann.pdf
 /cpu.pdf
+/ttl_log01.pdf
+/ttl_neg.pdf
+/log_symbols.pdf
+/not_jako_nand.pdf
+/multiplex.pdf
+/full_adder.pdf
+/half_adder.pdf
+/full_adder2.pdf
+/ripple_adder.pdf
+/lookahead_direct.pdf
+/lookahead_ripple.pdf
+/anim
