Lekce 1 Update logical signs

--- a/01-intro/.gitignore
+++ b/01-intro/.gitignore
@@ -22,3 +22,7 @@
 /lookahead_direct.pdf
 /lookahead_ripple.pdf
 /anim
+/lookahead_tree.pdf
+/multiplex-tree.pdf
+/lookahead_tree_carry.pdf
+/barrel-shift.pdf
