--- a/02-numbers/.gitignore
+++ b/02-numbers/.gitignore
@@ -8,7 +8,8 @@
 /*.out
 /*.toc
 /*.upa
-/*.vrb/multiplier-seq.pdf
+/*.vrb
+/multiplier-seq.pdf
 /wallace-tree.pdf
 /wallace-tree3.pdf
 /wallace-tree2.pdf
