Lekce 05 more pictures

--- a/05-pipeline/.gitignore
+++ b/05-pipeline/.gitignore
@@ -24,3 +24,8 @@
 /pipeline_stall2.pdf
 /lekce05-pipeline.pdf
 /apo05_2021.pdf
+/cpu_design2.pdf
+/cpu_final_design.pdf
+/cpu_design.pdf
+/cpu_design3.pdf
+/cpu_branch_pred.pdf
