Lekce 06 next update

--- a/06-predictors/.gitignore
+++ b/06-predictors/.gitignore
@@ -18,3 +18,9 @@
 /superscalar-architecture2.pdf
 /for_cyklus.pdf
 /if_preklad.pdf
+/smith_2bit.pdf
+/smith_2bit_hist.pdf
+/smith_1bit.pdf
+/prediction_BHR.pdf
+/prediction_table.pdf
+/prediction_GShare.pdf
