Lekce 07 next step

--- a/07-io/.gitignore
+++ b/07-io/.gitignore
@@ -30,3 +30,9 @@
 /cpu_design2.pdf
 /lekce07-io.pdf
 /apo07_2021.pdf
+/linux.pdf
+/address_decoder.pdf
+/distributed.pdf
+/serial_signals.pdf
+/central.pdf
+/UART.pdf
