lekce 07 almost ready

--- a/07-io/.gitignore
+++ b/07-io/.gitignore
@@ -36,3 +36,15 @@
 /serial_signals.pdf
 /central.pdf
 /UART.pdf
+/switch_bus.pdf
+/sdileny_bus.pdf
+/pentium4.pdf
+/amd_am5.pdf
+/PCI_clock.pdf
+/PCI_arch.pdf
+/PCI_write1.pdf
+/PCI_write4.pdf
+/PCI_write2.pdf
+/PCI_write3.pdf
+/PCI_read1.pdf
+/bus_arch.pdf
