Lekce 08 - translated slides with knobs and LCD peripherals

--- a/05-pipeline/.gitignore
+++ b/05-pipeline/.gitignore
@@ -34,3 +34,24 @@
 /hazard_forwarding2.pdf
 /hazard_forwarding.pdf
 /hazard_forwarding3.pdf
+/cpu-time.pdf
+/cpu_ifetch_exe.pdf
+/cpu_pipe_stages.pdf
+/cpu_pipe_isnt_flow.pdf
+/cpu_pipe_inst_flow.pdf
+/hazard_kinds.pdf
+/hazard_data.pdf
+/hazard_stall_qtrvsim2.pdf
+/hazard_stall_qtrvsim4.pdf
+/hazard_stall_qtrvsim3.pdf
+/hazard_ctrl_mips2.pdf
+/hazard_ctrl_mips.pdf
+/clock_distribution_skew.pdf
+/clock_distribution_h_tree.pdf
+/pipeline_balancing2.pdf
+/pipeline_balancing.pdf
+/pipeline_balancing3.pdf
+/pipeline_today_depths.pdf
+/pipeline_timing1.pdf
+/pipeline_timing2.pdf
+/cpu_final_design_bonus.pdf
