Lekce 08 - return back and translate to Czech AXI channels concept.

--- a/04-memory/.gitignore
+++ b/04-memory/.gitignore
@@ -15,3 +15,7 @@
 /dram.pdf
 /cache-size-vs-block.pdf
 /cache-size-vs-ways.pdf
+/paging-2-levels-cz.pdf
+/paging-2-levels.pdf
+/addr-space.pdf
+/paging-1-level.pdf
