--- a/08-mz_apo/.gitignore
+++ b/08-mz_apo/.gitignore
@@ -33,3 +33,7 @@
 /amba-axi-write.pdf
 /mmap-phys-memory-range.pdf
 /mmap-phys-memory-range-cz.pdf
+/amba-axi-write-concept.pdf
+/amba-axi-write-concept-cz.pdf
+/amba-axi-read-concept.pdf
+/amba-axi-read-concept-cz.pdf
