--- a/10-call/.gitignore
+++ b/10-call/.gitignore
@@ -11,3 +11,10 @@
 /_minted*
 /lekce10-call.pdf
 /apo10_2021.pdf
+/Jalr-mem.pdf
+/Qtrvsim-jalr.pdf
+/Jalr-exec.pdf
+/zasobnik.pdf
+/jednoducha_fce.pdf
+/slozita_fce.pdf
+/slozita_fce_fp.pdf
