--- a/10-call/.gitignore
+++ b/10-call/.gitignore
@@ -18,3 +18,7 @@
 /jednoducha_fce.pdf
 /slozita_fce.pdf
 /slozita_fce_fp.pdf
+/rozlozeni_procesu.pdf
+/vaarg_fce_fp.pdf
+/irq-and-os.pdf
+/overflow_fce.pdf
