Lekce 09 - updated gitignore.

--- a/09-irq-events/.gitignore
+++ b/09-irq-events/.gitignore
@@ -11,3 +11,11 @@
 /_minted*
 /lekce09-irq-events.pdf
 /apo09_2021.pdf
+/computer-as-controller.pdf
+/computer-as-controller-cz.pdf
+/riscv-mstatus.pdf
+/riscv-mcause.pdf
+/irq-and-os-intercation.pdf
+/dma-transfer-1.pdf
+/dma-transfer-3.pdf
+/dma-transfer-2.pdf
