lecture 02 en: based on copy of Czech version
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/02-numbers/.gitignore
+++ b/02-numbers/.gitignore
@@ -1,4 +1,4 @@
-/lekce02-numbers.pdf
+/apo-lecture02-numbers.pdf
 /apo02_2021.pdf
 /*.aux
 /*.log
@@ -21,3 +21,4 @@
 /float_bin.pdf
 /float_priklad.pdf
 /overflow.pdf
+/apo-lecture02-numbers-en.pdf
