lecture 02 en: finish translation
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/02-numbers/.gitignore
+++ b/02-numbers/.gitignore
@@ -22,3 +22,8 @@
 /float_priklad.pdf
 /overflow.pdf
 /apo-lecture02-numbers-en.pdf
+/multiplier-seq-en.pdf
+/divider-seq-en.pdf
+/add-sub-en.pdf
+/substaction-en.pdf
+/float_example-en.pdf
