lecture 03 en: finished translation
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/03-cpu/.gitignore
+++ b/03-cpu/.gitignore
@@ -37,3 +37,10 @@
 /multiplexor.pdf
 /imm_decode.pdf
 /alu.pdf
+/cpu_step_wrong.pdf
+/apo-lecture03-cpu-en.pdf
+/d_latch_e1-en.pdf
+/d_latch_e0-en.pdf
+/cpu_step-en.pdf
+/inst_mem-en.pdf
+/memory-en.pdf
