lecture 04 en: finished translation
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/04-memory/.gitignore
+++ b/04-memory/.gitignore
@@ -19,3 +19,32 @@
 /paging-2-levels.pdf
 /addr-space.pdf
 /paging-1-level.pdf
+/address-trans-4-levels.pdf
+/cache-direct-mapping-1byte.pdf
+/cache-direct-ms.pdf
+/cache-direct-simple.pdf
+/cache-n-way-ms.pdf
+/cache-principle.pdf
+/cache-schema-2way.pdf
+/cache-schema-direct.pdf
+/cache-schema-fully.pdf
+/memory-gap.pdf
+/mem-reg-to-disc.pdf
+/paging-canonical-64-bit.pdf
+/paging-cpu-mm-mem.pdf
+/paging-pde-1.pdf
+/paging-pte.pdf
+/paging-tlb.pdf
+/paging-to-disc.pdf
+/pc-memory-to-numa.pdf
+/ram-matrix.pdf
+/sdram-dimm.pdf
+/sram-6t-cell.pdf
+/apo-lecture03-memory-en.pdf
+/apo-lecture04-memory-en.pdf
+/addr-space-en.pdf
+/dram-en.pdf
+/sram-en.pdf
+/memory-gap-en.pdf
+/paging-1-level-en.pdf
+/paging-2-levels-en.pdf
