lecture 05 en: translation completed
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/05-pipeline/.gitignore
+++ b/05-pipeline/.gitignore
@@ -55,3 +55,12 @@
 /pipeline_timing1.pdf
 /pipeline_timing2.pdf
 /cpu_final_design_bonus.pdf
+/apo-lecture05-pipeline-en.pdf
+/cpu_pipe_inst_flow-en.pdf
+/hazard_kinds-en.pdf
+/hazard_data-en.pdf
+/forward_data-en.pdf
+/pipeline_stall-en.pdf
+/pipeline_stall2-en.pdf
+/hazard_ctrl2-en.pdf
+/hazard_ctrl-en.pdf
