lecture 06 en: prepare images for English version.
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/06-predictors/.gitignore
+++ b/06-predictors/.gitignore
@@ -26,3 +26,14 @@
 /prediction_GShare.pdf
 /neuron.pdf
 /prediction_amd.pdf
+/apo-lecture06-speculative-en.pdf
+/for_cykle-en.pdf
+/if_translation-en.pdf
+/prediction_table-en.pdf
+/smith_1bit-en.pdf
+/smith_2bit-en.pdf
+/smith_2bit_hist-en.pdf
+/prediction_BHR-en.pdf
+/prediction_GShare-en.pdf
+/neuron-en.pdf
+/prediction_amd-en.pdf
