Update .gitignore files
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/01-intro/.gitignore
+++ b/01-intro/.gitignore
@@ -1,5 +1,3 @@
-/lekce01-intro.pdf
-/apo01_2021.pdf
 /*.aux
 /*.log
 /*.snm
@@ -9,27 +7,31 @@
 /*.toc
 /*.upa
 /*.vrb
-/_minted*
-/cpu-vonNeumann.pdf
-/cpu.pdf
-/ttl_log01.pdf
-/ttl_neg.pdf
-/log_symbols.pdf
-/not_jako_nand.pdf
-/multiplex.pdf
-/full_adder.pdf
-/half_adder.pdf
-/full_adder2.pdf
-/ripple_adder.pdf
-/lookahead_direct.pdf
-/lookahead_ripple.pdf
 /anim
-/lookahead_tree.pdf
-/multiplex-tree.pdf
-/lookahead_tree_carry.pdf
+/_minted*
 /barrel-shift.pdf
 /cmos_neg.pdf
-/or_by_nand.pdf
+/cpu-cz.pdf
+/cpu-en.pdf
+/cpu-vonNeumann.pdf
+/full_adder2.pdf
+/full_adder.pdf
+/half_adder.pdf
+/log_symbols.pdf
+/lookahead_direct.pdf
+/lookahead_ripple.pdf
 /lookahead_select.pdf
+/lookahead_tree_carry.pdf
+/lookahead_tree.pdf
+/multiplex.pdf
+/multiplex-tree.pdf
+/not_jako_nand.pdf
+/or_by_nand.pdf
 /preklad.pdf
-/moddate.tex
+/ripple_adder.pdf
+/ttl_log01-cz.pdf
+/ttl_log01-en.pdf
+/ttl_neg.pdf
+/apo-lecture01-intro-en.pdf
+/apo01_2021.pdf
+/apo-lecture01-intro-cz.pdf
