--- a/02-numbers/.gitignore
+++ b/02-numbers/.gitignore
@@ -1,5 +1,3 @@
-/lekce02-numbers.pdf
-/apo02_2021.pdf
 /*.aux
 /*.log
 /*.snm
@@ -11,13 +9,22 @@
 /*.vrb
 /anim
 /_minted*
-/multiplier-seq.pdf
-/wallace-tree.pdf
-/wallace-tree3.pdf
-/wallace-tree2.pdf
-/divider-seq.pdf
+/add-sub-en.pdf
+/divider-seq-cz.pdf
+/divider-seq-en.pdf
 /doplnek-graf.pdf
-/odcitani.pdf
+/float_bin-1.pdf
 /float_bin.pdf
-/float_priklad.pdf
+/float_example-cz.pdf
+/float_example-en.pdf
+/multiplier-seq-cz.pdf
+/multiplier-seq-en.pdf
 /overflow.pdf
+/substaction-cz.pdf
+/substaction-en.pdf
+/wallace-tree2.pdf
+/wallace-tree3.pdf
+/wallace-tree.pdf
+/apo-lecture02-numbers-en.pdf
+/apo02_2021.pdf
+/apo-lecture02-numbers-cz.pdf
