--- a/03-cpu/.gitignore
+++ b/03-cpu/.gitignore
@@ -1,5 +1,3 @@
-/lekce03-cpu.pdf
-/apo03_2021.pdf
 /*.aux
 /*.log
 /*.snm
@@ -10,31 +8,41 @@
 /*.upa
 /*.vrb
 /anim
-/cpu-load2.pdf
-/cpu-vonNeumann.pdf
+/_minted*
+/alu.pdf
+/cpu-add2.pdf
 /cpu-addi.pdf
-/cpu-load.pdf
-/simulator.pdf
-/cpu-control-unit.pdf
-/cpu-beq.pdf
-/cpu-increment.pdf
-/flip-flop.pdf
 /cpu-add.pdf
+/cpu-beq.pdf
+/cpu-control-unit.pdf
+/cpu-increment.pdf
+/cpu-load2.pdf
+/cpu-load-red.pdf
+/cpu-load.pdf
+/cpu_step-cz.pdf
+/cpu_step-en.pdf
+/cpu_step_wrong-cz.pdf
 /cpu-store2.pdf
 /cpu-store.pdf
-/cpu_step.pdf
-/cpu_step_wrong.pdf
-/cpu-load-red.pdf
-/cpu-add2.pdf
 /cpu-time.pdf
+/cpu-vonNeumann.pdf
+/d_latch_e0-cz.pdf
+/d_latch_e0-en.pdf
+/d_latch_e1-cz.pdf
+/d_latch_e1-en.pdf
 /d_latch.pdf
-/d_latch_e0.pdf
-/d_latch_e1.pdf
 /edge.pdf
-/registr.pdf
-/registry.pdf
-/memory.pdf
-/inst_mem.pdf
-/multiplexor.pdf
+/flip-flop.pdf
 /imm_decode.pdf
-/alu.pdf
+/inst_mem-cz.pdf
+/inst_mem-en.pdf
+/memory-cz.pdf
+/memory-en.pdf
+/multiplexor.pdf
+/registers-cz.pdf
+/registers-en.pdf
+/registr.pdf
+/simulator.pdf
+/apo-lecture03-cpu-en.pdf
+/apo03_2021.pdf
+/apo-lecture03-cpu-cz.pdf
