--- a/04-memory/.gitignore
+++ b/04-memory/.gitignore
@@ -1,5 +1,3 @@
-/lekce04-memory.pdf
-/apo04_2021.pdf
 /*.aux
 /*.log
 /*.snm
@@ -11,11 +9,40 @@
 /*.vrb
 /anim
 /_minted*
-/sram.pdf
-/dram.pdf
+/address-trans-4-levels.pdf
+/addr-space-cz.pdf
+/addr-space-en.pdf
+/cache-direct-mapping-1byte.pdf
+/cache-direct-ms.pdf
+/cache-direct-simple.pdf
+/cache-n-way-ms.pdf
+/cache-principle.pdf
+/cache-schema-2way.pdf
+/cache-schema-direct.pdf
+/cache-schema-fully.pdf
 /cache-size-vs-block.pdf
 /cache-size-vs-ways.pdf
+/dram-cz.pdf
+/dram-en.pdf
+/memory-gap-cz.pdf
+/memory-gap-en.pdf
+/mem-reg-to-disc.pdf
+/paging-1-level-cz.pdf
+/paging-1-level-en.pdf
 /paging-2-levels-cz.pdf
-/paging-2-levels.pdf
-/addr-space.pdf
-/paging-1-level.pdf
+/paging-2-levels-en.pdf
+/paging-canonical-64-bit.pdf
+/paging-cpu-mm-mem.pdf
+/paging-pde-1.pdf
+/paging-pte.pdf
+/paging-tlb.pdf
+/paging-to-disc.pdf
+/pc-memory-to-numa.pdf
+/ram-matrix.pdf
+/sdram-dimm.pdf
+/sram-6t-cell.pdf
+/sram-cz.pdf
+/sram-en.pdf
+/apo-lecture04-memory-en.pdf
+/apo04_2021.pdf
+/apo-lecture04-memory-cz.pdf
