--- a/05-pipeline/.gitignore
+++ b/05-pipeline/.gitignore
@@ -9,49 +9,57 @@
 /*.vrb
 /anim
 /_minted*
-/hazard_ctrl.pdf
-/single_cpu.pdf
-/cpu_clock.pdf
-/noforward_data.pdf
-/cpu_nopipe.pdf
-/pipeline_stall.pdf
-/forward_hazard.pdf
-/cpu_pipe.pdf
-/cpu_fwd_stall.pdf
-/cpu_ctrl_pipe.pdf
-/hazard_ctrl2.pdf
-/forward_data.pdf
-/pipeline_stall2.pdf
-/lekce05-pipeline.pdf
-/apo05_2021.pdf
-/cpu_design2.pdf
-/cpu_final_design.pdf
-/cpu_design.pdf
-/cpu_design3.pdf
+/clock_distribution_h_tree.pdf
+/clock_distribution_skew.pdf
 /cpu_branch_pred.pdf
-/hazard_qtrvsim.pdf
-/hazard_stall_qtrvsim.pdf
-/hazard_forwarding2.pdf
-/hazard_forwarding.pdf
-/hazard_forwarding3.pdf
-/cpu-time.pdf
+/cpu_clock.pdf
+/cpu_ctrl_pipe.pdf
+/cpu_design2.pdf
+/cpu_design3.pdf
+/cpu_design.pdf
+/cpu_final_design_bonus.pdf
+/cpu_final_design.pdf
+/cpu_fwd_stall.pdf
 /cpu_ifetch_exe.pdf
+/cpu_nopipe.pdf
+/cpu_pipe_inst_flow-cz.pdf
+/cpu_pipe_inst_flow-en.pdf
 /cpu_pipe_stages.pdf
-/cpu_pipe_isnt_flow.pdf
-/cpu_pipe_inst_flow.pdf
-/hazard_kinds.pdf
-/hazard_data.pdf
-/hazard_stall_qtrvsim2.pdf
-/hazard_stall_qtrvsim4.pdf
-/hazard_stall_qtrvsim3.pdf
+/cpu_pipe.pdf
+/cpu-time.pdf
+/forward_data-cz.pdf
+/forward_data-en.pdf
+/forward_hazard.pdf
+/hazard_ctrl2-cz.pdf
+/hazard_ctrl2-en.pdf
+/hazard_ctrl-cz.pdf
+/hazard_ctrl-en.pdf
 /hazard_ctrl_mips2.pdf
 /hazard_ctrl_mips.pdf
-/clock_distribution_skew.pdf
-/clock_distribution_h_tree.pdf
+/hazard_data-cz.pdf
+/hazard_data-en.pdf
+/hazard_forwarding2.pdf
+/hazard_forwarding3.pdf
+/hazard_forwarding.pdf
+/hazard_kinds-cz.pdf
+/hazard_kinds-en.pdf
+/hazard_qtrvsim.pdf
+/hazard_stall_qtrvsim2.pdf
+/hazard_stall_qtrvsim3.pdf
+/hazard_stall_qtrvsim4.pdf
+/hazard_stall_qtrvsim.pdf
+/noforward_data.pdf
 /pipeline_balancing2.pdf
-/pipeline_balancing.pdf
 /pipeline_balancing3.pdf
-/pipeline_today_depths.pdf
+/pipeline_balancing.pdf
+/pipeline_stall2-cz.pdf
+/pipeline_stall2-en.pdf
+/pipeline_stall-cz.pdf
+/pipeline_stall-en.pdf
 /pipeline_timing1.pdf
 /pipeline_timing2.pdf
-/cpu_final_design_bonus.pdf
+/pipeline_today_depths.pdf
+/single_cpu.pdf
+/apo-lecture05-pipeline-en.pdf
+/apo05_2021.pdf
+/apo-lecture05-pipeline-cz.pdf
