--- a/06-predictors/.gitignore
+++ b/06-predictors/.gitignore
@@ -10,19 +10,30 @@
 /anim
 /_minted*
 /cpu_final_design.pdf
-/lekce06-predictors.pdf
-/apo06_2021.pdf
-/superscalar.pdf
+/for_loop-cz.pdf
+/for_loop-en.pdf
+/if_translation-cz.pdf
+/if_translation-en.pdf
+/neuron-cz.pdf
+/neuron-en.pdf
 /pipeline.pdf
-/superscalar-architecture.pdf
+/prediction_amd-cz.pdf
+/prediction_amd-en.pdf
+/prediction_BHR-cz.pdf
+/prediction_BHR-en.pdf
+/prediction_GShare-cz.pdf
+/prediction_GShare-en.pdf
+/prediction_table-cz.pdf
+/prediction_table-en.pdf
+/smith_1bit-cz.pdf
+/smith_1bit-en.pdf
+/smith_2bit-cz.pdf
+/smith_2bit-en.pdf
+/smith_2bit_hist-cz.pdf
+/smith_2bit_hist-en.pdf
 /superscalar-architecture2.pdf
-/for_cyklus.pdf
-/if_preklad.pdf
-/smith_2bit.pdf
-/smith_2bit_hist.pdf
-/smith_1bit.pdf
-/prediction_BHR.pdf
-/prediction_table.pdf
-/prediction_GShare.pdf
-/neuron.pdf
-/prediction_amd.pdf
+/superscalar-architecture.pdf
+/superscalar.pdf
+/apo-lecture06-predictors-en.pdf
+/apo06_2021.pdf
+/apo-lecture06-predictors-cz.pdf
