--- a/08-mz_apo/.gitignore
+++ b/08-mz_apo/.gitignore
@@ -9,32 +9,32 @@
 /*.vrb
 /anim
 /_minted*
-/lekce08-mz_apo.pdf
-/apo08_2021.pdf
+/address_decoder-cz.pdf
+/amba-axi-read-concept-cz.pdf
+/amba-axi-read-concept.pdf
+/amba-axi-read.pdf
+/amba-axi-write-concept-cz.pdf
+/amba-axi-write-concept.pdf
+/amba-axi-write.pdf
 /cie1931xy_gamut_comparison.pdf
-/mz_apo-vivado-design.pdf
-/mz_apo-kit-with-cover-labels.pdf
-/mz_apo-baseboard-top-labels.pdf
-/microzed-board-top-labels.pdf
-/microzed-board-bottom-labels.pdf
-/mz_apo-lcd-access.pdf
-/mz_apo-spiled-and-knobs.pdf
-/mz_apo-spiled-and-knobs-cz.pdf
-/mz_apo-lcd-access-cz.pdf
-/xylinx-zynq-7000-block-diagram.pdf
-/xylinx-zynq-7000-block-diagram-cz.pdf
-/xylinx-zynq-7000-block-core.pdf
 /cortex-a9-core-pipeline-label.pdf
+/microzed-board-bottom-labels-cz.pdf
+/microzed-board-top-labels-cz.pdf
+/mmap-phys-memory-range-cz.pdf
+/mmap-phys-memory-range.pdf
+/mz_apo-baseboard-top-labels-cz.pdf
+/mz_apo-baseboard-top-labels-en.pdf
+/mz_apo-kit-with-cover-labels-cz.pdf
+/mz_apo-lcd-access-cz.pdf
+/mz_apo-lcd-access.pdf
+/mz_apo-spiled-and-knobs-cz.pdf
+/mz_apo-spiled-and-knobs.pdf
+/mz_apo-vivado-design.pdf
+/paging-2-levels-cortex-a9-cz.pdf
 /paging-2-levels-cz.pdf
 /paging-2-levels.pdf
-/paging-2-levels-cortex-a9-cz.pdf
-/address_decoder.pdf
-/amba-axi-read.pdf
-/amba-axi-write.pdf
-/mmap-phys-memory-range.pdf
-/mmap-phys-memory-range-cz.pdf
-/amba-axi-write-concept.pdf
-/amba-axi-write-concept-cz.pdf
-/amba-axi-read-concept.pdf
-/amba-axi-read-concept-cz.pdf
-/mz_apo-baseboard-top-labels-en.pdf
+/xylinx-zynq-7000-block-core.pdf
+/xylinx-zynq-7000-block-diagram-cz.pdf
+/xylinx-zynq-7000-block-diagram.pdf
+/apo-lecture08-mz_apo-cz.pdf
+/apo08_2021.pdf
