--- a/09-irq-events/.gitignore
+++ b/09-irq-events/.gitignore
@@ -9,13 +9,13 @@
 /*.vrb
 /anim
 /_minted*
-/lekce09-irq-events.pdf
-/apo09_2021.pdf
-/computer-as-controller.pdf
 /computer-as-controller-cz.pdf
-/riscv-mstatus.pdf
-/riscv-mcause.pdf
-/irq-and-os-intercation.pdf
+/computer-as-controller.pdf
 /dma-transfer-1.pdf
-/dma-transfer-3.pdf
 /dma-transfer-2.pdf
+/dma-transfer-3.pdf
+/irq-and-os-intercation.pdf
+/riscv-mcause.pdf
+/riscv-mstatus.pdf
+/apo-lecture09-irq-events-cz.pdf
+/apo09_2021.pdf
