--- a/10-call/.gitignore
+++ b/10-call/.gitignore
@@ -9,16 +9,16 @@
 /*.vrb
 /anim
 /_minted*
-/lekce10-call.pdf
-/apo10_2021.pdf
-/Jalr-mem.pdf
-/Qtrvsim-jalr.pdf
+/complex_fnc-cz.pdf
+/complex_fnc_fp-cz.pdf
+/irq-and-os-cz.pdf
 /Jalr-exec.pdf
-/zasobnik.pdf
-/jednoducha_fce.pdf
-/slozita_fce.pdf
-/slozita_fce_fp.pdf
-/rozlozeni_procesu.pdf
-/vaarg_fce_fp.pdf
-/irq-and-os.pdf
-/overflow_fce.pdf
+/Jalr-mem.pdf
+/overflow_fnc-cz.pdf
+/proc_addr_space-cz.pdf
+/Qtrvsim-jalr.pdf
+/simple_fnc-cz.pdf
+/stack-push-pop.pdf
+/vaarg_fnc_fp-cz.pdf
+/apo-lecture10-call-cz.pdf
+/apo10_2021.pdf
