--- a/11-architekturax86/.gitignore
+++ b/11-architekturax86/.gitignore
@@ -1,32 +1,32 @@
-/cpu.pdf
-/registers.pdf
-/multi-proc.pdf
-/step.pdf
-/flags.pdf
-/step-inter.pdf
-/distrib.pdf
-/lekce01.pdf
-/osy1_2017.pdf
-/stack.pdf
-/osy1_2018.pdf
-/osy11_2019.pdf
-/mmx.pdf
-/mmx-mul-add.pdf
-/mmx-add.pdf
-/mmx-add-sat.pdf
-/sse.pdf
-/mmx-mulh.pdf
-/mmx-mull.pdf
-/sse-s.pdf
-/lekce11-x86.pdf
-/apo11_2019.pdf
-/apo11_2021.pdf
+/*.aux
+/*.log
+/*.snm
+/*.gz
+/*.nav
+/*.synctex.gz
+/*.out
+/*.toc
+/*.upa
+/*.vrb
+*.nav
 /anim
 /_minted*
-*log
-*synctex.gz
-*aux
-*nav
-*out
-*toc
-/fce_frame.pdf
+/cpu-cz.pdf
+/distrib-cz.pdf
+/flags-cz.pdf
+/fnc_frame-cz.pdf
+/mmx-add-sat.pdf
+/mmx-add.pdf
+/mmx-mul-add.pdf
+/mmx-mulh.pdf
+/mmx-mull.pdf
+/mmx.pdf
+/multi-proc-cz.pdf
+/registers.pdf
+/sse-s.pdf
+/sse.pdf
+/stack.pdf
+/step-cz.pdf
+/step-inter-cz.pdf
+/apo-lecture11-x86-cz.pdf
+/apo11_2021.pdf
