--- a/07-io/.gitignore
+++ b/07-io/.gitignore
@@ -9,43 +9,33 @@
 /*.vrb
 /anim
 /_minted*
-/cpu_final_design.pdf
-/lekce06-predictors.pdf
-/apo06_2021.pdf
-/superscalar.pdf
-/pipeline.pdf
-/superscalar-architecture.pdf
-/superscalar-architecture2.pdf
-/for_cyklus.pdf
-/if_preklad.pdf
-/smith_2bit.pdf
-/smith_2bit_hist.pdf
-/smith_1bit.pdf
-/prediction_BHR.pdf
-/prediction_table.pdf
-/prediction_GShare.pdf
-/neuron.pdf
-/prediction_amd.pdf
-/cpu-vonNeumann.pdf
-/cpu_design2.pdf
-/lekce07-io.pdf
-/apo07_2021.pdf
-/linux.pdf
-/address_decoder.pdf
-/distributed.pdf
-/serial_signals.pdf
-/central.pdf
-/UART.pdf
-/switch_bus.pdf
-/sdileny_bus.pdf
-/pentium4.pdf
+/address_decoder-cz.pdf
+/address_decoder-en.pdf
 /amd_am5.pdf
-/PCI_clock.pdf
+/bus_arch-cz.pdf
+/bus_arch-en.pdf
+/central-cz.pdf
+/central-en.pdf
+/cpu_design2.pdf
+/cpu-vonNeumann.pdf
+/distributed-cz.pdf
+/linux.pdf
 /PCI_arch.pdf
-/PCI_write1.pdf
-/PCI_write4.pdf
-/PCI_write2.pdf
-/PCI_write3.pdf
+/PCI_clock.pdf
 /PCI_read1.pdf
-/bus_arch.pdf
-/rozlozeni_procesu.pdf
+/PCI_write1.pdf
+/PCI_write2-cz.pdf
+/PCI_write2-en.pdf
+/PCI_write3-cz.pdf
+/PCI_write3-en.pdf
+/PCI_write4-cz.pdf
+/PCI_write4-en.pdf
+/pentium4.pdf
+/proc_addr_space-cz.pdf
+/serial_signals.pdf
+/shared_bus.pdf
+/switch_bus.pdf
+/UART-cz.pdf
+/UART-en.pdf
+/apo-lecture07-io-cz.pdf
+/apo07_2021.pdf
