lecture 08 en: translate texts in diagrams to English
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/08-mz_apo/.gitignore
+++ b/08-mz_apo/.gitignore
@@ -38,3 +38,16 @@
 /xylinx-zynq-7000-block-diagram.pdf
 /apo-lecture08-mz_apo-cz.pdf
 /apo08_2021.pdf
+/mz_apo-lcd-access-en.pdf
+/mmap-phys-memory-range-en.pdf
+/address_decoder-en.pdf
+/mz_apo-spiled-and-knobs-en.pdf
+/amba-axi-read-concept-en.pdf
+/amba-axi-write-concept-en.pdf
+/paging-2-levels-en.pdf
+/paging-2-levels-cortex-a9-en.pdf
+/xylinx-zynq-7000-block-diagram-en.pdf
+/microzed-board-bottom-labels-en.pdf
+/microzed-board-top-labels-en.pdf
+/mz_apo-kit-with-cover-labels-en.pdf
+/apo-lecture08-mz_apo-en.pdf
