lecture 08 en: add CAN latency tester and pysimCoder examples
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/08-mz_apo/.gitignore
+++ b/08-mz_apo/.gitignore
@@ -51,3 +51,7 @@
 /microzed-board-top-labels-en.pdf
 /mz_apo-kit-with-cover-labels-en.pdf
 /apo-lecture08-mz_apo-en.pdf
+/font-sizes-en.pdf
+/font-render-example.pdf
+/font-render-rom8x16.pdf
+/font-mw-descriptor.pdf
