Update gitignores files.
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/07-io/.gitignore
+++ b/07-io/.gitignore
@@ -39,3 +39,7 @@
 /UART-en.pdf
 /apo-lecture07-io-cz.pdf
 /apo07_2021.pdf
+/distributed-en.pdf
+/apo-lecture07-io-en.pdf
+/PCI_arch-cz.pdf
+/PCI_arch-en.pdf
