--- a/09-irq-events/.gitignore
+++ b/09-irq-events/.gitignore
@@ -19,3 +19,5 @@
 /riscv-mstatus.pdf
 /apo-lecture09-irq-events-cz.pdf
 /apo09_2021.pdf
+/apo-lecture09-irq-events-en.pdf
+/computer-as-controller-en.pdf
