lecture 10 en: the lecture translated to English.
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/10-call/.gitignore
+++ b/10-call/.gitignore
@@ -22,3 +22,11 @@
 /vaarg_fnc_fp-cz.pdf
 /apo-lecture10-call-cz.pdf
 /apo10_2021.pdf
+/apo-lecture10-call-en.pdf
+/irq-and-os-en.pdf
+/vaarg_fnc_fp-en.pdf
+/overflow_fnc-en.pdf
+/proc_addr_space-en.pdf
+/complex_fnc-en.pdf
+/simple_fnc-en.pdf
+/complex_fnc_fp-en.pdf
