lecture 11 en: English translation
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/11-architekturax86/.gitignore
+++ b/11-architekturax86/.gitignore
@@ -30,3 +30,7 @@
 /step-inter-cz.pdf
 /apo-lecture11-x86-cz.pdf
 /apo11_2021.pdf
+/cpu-en.pdf
+/flags-en.pdf
+/fnc_frame-en.pdf
+/apo-lecture11-x86-en.pdf
